--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,7 @@
 
 header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url(/Fundo.jpg);
+    url(https://github.com/Lucas-Henrique-Lopes-Costa/Site-de-Negocios/blob/299b985383bb4e40ee6774d40dc45b2e89aee2e6/src/Fundo.jpg?raw=true);
   height: 100vh;
   background-size: cover;
   background-position: center;
